syntax = "proto3";

package task;

option go_package = "gen/todopb";

message Todo {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  bool done = 5;
}

message CreateTodoRequest {
  string user_id = 1;
  string title = 2;
  string description = 3;
}

message GetTodoRequest {
  string user_id = 1;
  string id = 2;
}

message TodoResponse {
  Todo todo = 1;
}

message GetTodosRequest {
	string user_id = 1;
}

message TodosResponse {
  repeated Todo todos = 1;
}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (TodoResponse);
  rpc GetTodo(GetTodoRequest) returns (TodoResponse);
  rpc GetTodos(GetTodosRequest) returns (TodosResponse);
}
