syntax = "proto3";

package user;

option go_package = "gen/userpb";

message User {
	string id = 1;
	string email = 2;
	string name = 3;
}

message CreateUserRequest {
	string email = 1;
	string name = 2;
	string password = 3;
}

message CreateUserResponse {
	User user = 1;
}

message GetUserRequest {
	string jwt = 1;
}

message GetUserResponse {
	User user = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string jwt = 1;
}

service UserService {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc GetUser(GetUserRequest) returns (GetUserResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
}
